Cambio de index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE  html>
-<!-- ng-app hace referencia al nombre de nuestro modulo -->
+<!-- ng-app hace referencia al nombre de nuestro modul0 -->
 <html lang="es" ng-app="app">
 	<head>
 		<meta charset="UTF-8" />
